add node_exporter md

--- a/efk/es-statefulset.yaml
+++ b/efk/es-statefulset.yaml
@@ -68,7 +68,7 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: quay.io/fluentd_elasticsearch/elasticsearch:v7.2.0
+      - image: quay-mirror.qiniu.com/fluentd_elasticsearch/elasticsearch:v7.2.0
         name: elasticsearch-logging
         imagePullPolicy: Always
         resources:
