--- a/consul/consul-statefulset-v16.yaml
+++ b/consul/consul-statefulset-v16.yaml
@@ -38,7 +38,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: consul
-        image: consul:latest
+        image: reg.test.local/library/consul:1.7
         args:
              - "agent"
              - "-server"
@@ -56,6 +56,7 @@ spec:
         volumeMounts:
             - name: consul-ceph-pvc
               mountPath: /consul/data
+   
         env:
             - name: PODIP
               valueFrom:
@@ -84,3 +85,5 @@ spec:
               name: consuldns
             - containerPort: 8300
               name: server
+      imagePullSecrets:
+      - name: harbor233 
