--- a/ahang/consul/20200611/consul-ingress.yaml
+++ b/ahang/consul/20200611/consul-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-consul
@@ -7,7 +7,7 @@ metadata:
     kubernets.io/ingress.class: "nginx"
 spec:
   rules:
-  - host:
+  - host: consul.$(NAMESPACE).svc.cluster.local 
     http:
       paths:
       - path: 
