--- a/info/0.0.2/info-auth-service_svc.yaml
+++ b/info/0.0.2/info-auth-service_svc.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   name: info-auth-service
   labels:
-    name: info-auth-service
-    version: v1
+    serviceName: info-auth-service
+    tag: 0.0.2
 spec:
   ports:
   - name: port8666
     port: 8666
     targetPort: 8666
   selector:
-    name: info-auth-service
+    serviceName: info-auth-service
