--- a/info/0.0.2/info-consumer-service_deploy.yaml
+++ b/info/0.0.2/info-consumer-service_deploy.yaml
@@ -3,19 +3,36 @@ kind: Deployment
 metadata:
   name: info-consumer-service
   labels:
-    name: info-consumer-service
+    serviceName: info-consumer-service
 spec:
   selector:
     matchLabels:
-      name: info-consumer-service
+      serviceName: info-consumer-service
   replicas: 2
   template:
     metadata:
       labels:
-        name: info-consumer-service
+        serviceName: info-consumer-service
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchExpressions:
+                - key: serviceName
+                  operator: In
+                  values:
+                  - info-consumer-service
       containers:
       - name: info-consumer-service
         image: reg.test.local/library/info-consumer-service:0.0.2
+        resources:
+          requests:
+            memory: 100Mi
+          limits:
+            memory: 1000Mi
       imagePullSecrets:
       - name: registry-secret
