--- a/info/0.0.2/info-nearby-service_svc.yaml
+++ b/info/0.0.2/info-nearby-service_svc.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   name: info-nearby-service
   labels:
-    name: info-nearby-service
-    version: v1
+    serviceName: info-nearby-service
+    tag: 0.0.2
 spec:
   ports:
   - name: port8805
     port: 8805
     targetPort: 8805
   selector:
-    name: info-nearby-service
+    serviceName: info-nearby-service
