--- a/info/0.0.2/info-news-service_svc.yaml
+++ b/info/0.0.2/info-news-service_svc.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   name: info-news-service
   labels:
-    name: info-news-service
-    version: v1
+    serviceName: info-news-service
+    tag: 0.0.2
 spec:
   ports:
   - name: port8806
     port: 8806
     targetPort: 8806
   selector:
-    name: info-news-service
+    serviceName: info-news-service
