--- a/info/0.0.2/info-payment-service_svc.yaml
+++ b/info/0.0.2/info-payment-service_svc.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   name: info-payment-service
   labels:
-    name: info-payment-service
-    version: v1
+    serviceName: info-payment-service
+    tag: 0.0.2
 spec:
   ports:
   - name: port8808
     port: 8808
     targetPort: 8808
   selector:
-    name: info-payment-service
+    serviceName: info-payment-service
