--- a/info/0.0.2/info-store-service_svc.yaml
+++ b/info/0.0.2/info-store-service_svc.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   name: info-store-service
   labels:
-    name: info-store-service
-    version: v1
+    serviceName: info-store-service
+    tag: 0.0.2
 spec:
   ports:
   - name: port8807
     port: 8807
     targetPort: 8807
   selector:
-    name: info-store-service
+    serviceName: info-store-service
