--- a/info/mould/info-deploy-mould.yaml
+++ b/info/mould/info-deploy-mould.yaml
@@ -3,19 +3,38 @@ kind: Deployment
 metadata:
   name: ${jarName}
   labels:
-    name: ${jarName}
+    serviceName: ${jarName}
 spec:
   selector:
     matchLabels:
-      name: ${jarName}
+      serviceName: ${jarName}
   replicas: 2
   template:
     metadata:
       labels:
-        name: ${jarName}
+        serviceName: ${jarName}
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchExpressions:
+                - key: serviceName
+                  operator: In
+                  values:
+                  - ${jarName}
       containers:
       - name: ${jarName}
         image: reg.test.local/library/${jarName}:${tag}
+        resources:
+          requests:
+            cpu: ${cpuRequest}
+            memory: ${memoryRequest}
+          limits:
+            cpu: ${cpuLimit} 
+            memory: ${memoryLimit}
       imagePullSecrets:
         - name: registry-secret
