--- a/ahang/info/0.0.2/info-hotel-service_svc.yaml
+++ b/ahang/info/0.0.2/info-hotel-service_svc.yaml
@@ -7,8 +7,10 @@ metadata:
     tag: 0.0.2
 spec:
   ports:
-  - name: port8804
-    port: 8804
-    targetPort: 8804
+    
+    - name: info-hotel-service
+      port: 8804
+      targetPort: 8804
+    
   selector:
     serviceName: info-hotel-service
