--- a/ahang/info/0.0.2/info-admin_svc.yaml
+++ b/ahang/info/0.0.2/info-admin_svc.yaml
@@ -7,8 +7,10 @@ metadata:
     tag: 0.0.2
 spec:
   ports:
-  - name: port7777
-    port: 7777
-    targetPort: 7777
+    
+    - name: info-admin
+      port: 7777
+      targetPort: 7777
+    
   selector:
     serviceName: info-admin
