--- a/ahang/info/0.0.2/info-store-service_svc.yaml
+++ b/ahang/info/0.0.2/info-store-service_svc.yaml
@@ -7,8 +7,10 @@ metadata:
     tag: 0.0.2
 spec:
   ports:
-  - name: port8807
-    port: 8807
-    targetPort: 8807
+    
+    - name: info-store-service
+      port: 8807
+      targetPort: 8807
+    
   selector:
     serviceName: info-store-service
